again create/add with Fullname Field

--- a/personal_info/create.html
+++ b/personal_info/create.html
@@ -4,16 +4,30 @@
 
 <form action="add.php"method = 'POST'>
 
-    <label>Full Name</label>
+    <label>Full Name:</label>
     <input type ="text" name = "fullname">
     <br>
-    <label>Father's Name</label>
+    <label>Father's Name:</label>
     <input type ="text" name = "fname">
     <br>
-    <label>Mother's Name</label>
+    <label>Mother's Name:</label>
     <input type ="text" name = "mname">
+    <br>
+    <label>Nationality:</label>
+    <input type ="text" name = "nationality">
+    <br>
+    <label>National ID:</label>
+    <input type ="text" name = "nationalid">
+    <br>
+    <label>Email:</label>
+    <input type ="text" name = "email">
+    <br>
+    <label>Mobile:</label>
+    <input type ="text" name = "mobile">
+    <br>
 
     <button type = "submit" name = "submit">Save</button>
+
 </form>
 </body>
 </html>
