--- a/personal_info/create.html
+++ b/personal_info/create.html
@@ -26,8 +26,14 @@
     <input type ="text" name = "mobile">
     <br>
 
+    <label>Track:</label>
+    <input type ="text" name = "track">
+
+
     <button type = "submit" name = "submit">Save</button>
 
 </form>
 </body>
 </html>
+
+<a href="list.php">Go to List</a>
