--- a/contact_info/create.html
+++ b/contact_info/create.html
@@ -9,8 +9,17 @@
     <label>Permanent Address:</label>
     <input type ="text" name = "peradd">
     <br>
-    <label>District:</label>
-    <input type ="text" name = "district">
+    <label>District</label>
+    <select name="district">
+        <option value="dhaka" selected>Dhaka</option>
+        <option value="barisal">Barisal</option>
+        <option value="sylhet">Sylhet</option>
+        <option value="rajshashi">Rajshahi</option>
+        <option value="khulna">Khulna</option>
+        <option value="chittagong">Chittagong</option>
+        <option value="comilla">Comilla</option>
+    </select>
+
     <br>
     <label>Home Phone:</label>
     <input type ="text" name = "hphone">
@@ -22,12 +31,12 @@
     <input type ="text" name = "econtact">
     <br>
     <label>Email:</label>
-    <input type ="text" name = "email">
+    <input type ="email" name = "email">
     <br>
 
     <label>Alternate Email:</label>
-    <input type ="text" name = "aemail">
-
+    <input type ="email" name = "aemail">
+    <br>
 
     <button type = "submit" name = "submit">Save</button>
 
